fixed chat alignment and default load for NEW IP (hopefully)

--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -55,7 +55,7 @@ section {
     margin-bottom: 50px;
 }
 
-#chat-now-button {
+.chat-now-button {
     bottom: 0; right: 0;
     margin-right: 20px;
     margin-bottom: 20px;
